--- a/Lesson06-Visualizer-Preferences/T06.07-Exercise-ListPreference/app/src/main/res/xml/pref_visualizer.xml
+++ b/Lesson06-Visualizer-Preferences/T06.07-Exercise-ListPreference/app/src/main/res/xml/pref_visualizer.xml
@@ -23,6 +23,13 @@
         android:summaryOn="@string/pref_show_true"
         android:title="@string/pref_show_treble_label" />
 
-    <!-- TODO (1) Add a list preference -->
+    <!--  (1) Add a list preference -->
+    <ListPreference
+        android:defaultValue="@string/pref_color_red_value"
+        android:title="@string/pref_color_select_title"
+        android:entries="@array/pref_color_options_labels"
+        android:entryValues="@array/pref_color_options_values"
+        android:key="@string/pref_color_key"
+        />
 
 </PreferenceScreen>
