--- a/Lesson11-Completeing-The-UI/T11.01-Exercise-ConstraintLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson11-Completeing-The-UI/T11.01-Exercise-ConstraintLayout/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,386 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- TODO (17) Surround the Constraint layout with a ScrollView -->
-<!-- TODO (2) Replace the Relative layout with a ConstraintLayout -->
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<!--  (17) Surround the Constraint layout with a ScrollView -->
+<ScrollView
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:id="@+id/scrollView"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+    <!--   (2) Replace the Relative layout with a ConstraintLayout -->
+
+
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tool="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <!--   (3) Create a TextView for the Passenger label and name -->
+    <!--   (4) Use tool:text to set the text value -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_passenger_label"
+        android:text="@string/passenger_label"
+        android:letterSpacing="0.5"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+        />
 
-    <!-- TODO (3) Create a TextView for the Passenger label and name -->
-    <!-- TODO (4) Use tool:text to set the text value -->
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        tool:text="@string/passenger_name"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tv_passenger_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_passenger_label"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
+        android:textColor="@color/colorPrimary"/>
 
-    <!-- TODO (5) Create an ImageView for the left rectangle -->
-    <!-- TODO (6) Set the background to the shape_rectangle_stroke drawable -->
+    <ImageView
+        android:id="@+id/iv_left_rectangle"
+        android:layout_width="60dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:srcCompat="@drawable/shape_rectangle_stroke" />
 
-    <!-- TODO (7) Create an ImageView for the divider -->
+    <ImageView
+        android:id="@+id/iv_right_rectangle"
+        android:layout_width="60dp"
+        android:layout_height="80dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:srcCompat="@drawable/shape_rectangle_stroke" />
 
-    <!-- TODO (8) Create an ImageView for the rightRectangle -->
+    <ImageView
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/iv_right_rectangle"
+        app:layout_constraintEnd_toStartOf="@+id/iv_right_rectangle"
+        app:layout_constraintStart_toEndOf="@+id/iv_left_rectangle"
+        app:layout_constraintTop_toBottomOf="@+id/iv_right_rectangle"
+        app:srcCompat="@color/colorPrimaryLight" />
 
-    <!-- TODO (9) Create a TextView for the origin code, the destination code and the flight code -->
+    <TextView
+        android:id="@+id/tv_origin_code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
+        app:layout_constraintBottom_toBottomOf="@+id/divider"
+        app:layout_constraintEnd_toEndOf="@+id/iv_left_rectangle"
+        app:layout_constraintStart_toStartOf="@+id/iv_left_rectangle"
+        app:layout_constraintTop_toBottomOf="@+id/divider"
+        tool:text="@string/origin_code" />
 
-    <!-- TODO (15) Import the plane image SVG file into the drawable directory and name it art_plane -->
-    <!-- TODO (16) Create an ImageView for the plane and set the background to art_plane drawable -->
+    <TextView
+        android:id="@+id/tv_destination_code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
+        app:layout_constraintBottom_toBottomOf="@+id/divider"
+        app:layout_constraintEnd_toEndOf="@+id/iv_right_rectangle"
+        app:layout_constraintStart_toStartOf="@+id/iv_right_rectangle"
+        app:layout_constraintTop_toBottomOf="@+id/divider"
+        tool:text="@string/destination_code" />
 
-    <!-- TODO (10) Create a TextView for the time texts and their corresponding labels -->
+    <TextView
+        android:id="@+id/tv_boarding_time_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+        android:letterSpacing="0.3"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_left_rectangle"
+        android:text="@string/boarding_time_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+         />
 
-    <!-- TODO (11) Create an ImageView for the blue table's header -->
+    <TextView
+        android:id="@+id/tv_boarding_time"
 
-    <!-- TODO (12) Create an ImageView for the blue table's body -->
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
+        android:textColor="@android:color/black"
+        app:layout_constraintStart_toStartOf="@+id/tv_boarding_time_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_boarding_time_label"
+        tool:text="@string/boarding_time" />
 
-    <!-- TODO (13) Create a TextView for each of the labels and text fields in the blue table -->
 
-    <!-- TODO (14) Create an ImageView for the barcode -->
+    <TextView
+        android:id="@+id/tv_depart_time_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:letterSpacing="0.3"
+        app:layout_constraintStart_toStartOf="@+id/tv_boarding_time"
+        app:layout_constraintTop_toBottomOf="@+id/tv_boarding_time"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+        android:text="@string/departure_time_label" />
 
-</RelativeLayout>
+    <!--   (5) Create an ImageView for the left rectangle -->
 
+
+    <TextView
+        android:id="@+id/tv_depart_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/holo_green_dark"
+
+        tool:text="@string/departure_time"
+        app:layout_constraintTop_toBottomOf="@id/tv_depart_time_label"
+        app:layout_constraintStart_toStartOf="@+id/tv_depart_time_label"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
+         />
+
+
+
+
+
+    <TextView
+        android:id="@+id/tv_boarding_in_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:letterSpacing="0.3"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/boarding_in_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_left_rectangle" />
+
+    <TextView
+        android:id="@+id/tv_boarding_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/holo_red_dark"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
+        app:layout_constraintStart_toStartOf="@+id/tv_boarding_in_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_boarding_in_label"
+        tool:text="@string/boarding_in_time" />
+
+    <TextView
+        android:id="@+id/tv_arrival_time_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:letterSpacing="0.3"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+        app:layout_constraintStart_toStartOf="@+id/tv_boarding_in"
+        app:layout_constraintTop_toBottomOf="@+id/tv_boarding_in"
+        android:text="@string/arrival_time_label" />
+
+    <TextView
+        android:id="@+id/tv_arrival_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tool:text="@string/arrival_time"
+        android:textColor="@android:color/holo_green_dark"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
+        app:layout_constraintStart_toStartOf="@+id/tv_arrival_time_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_arrival_time_label" />
+
+    <ImageView
+        android:id="@+id/iv_table_header"
+        android:layout_width="0dp"
+        android:layout_height="24dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintHorizontal_bias="0.33"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_depart_time"
+        app:srcCompat="@color/colorPrimaryLight" />
+
+    <ImageView
+        android:id="@+id/iv_table"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_terminal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_table_header" />
+
+
+
+    <TextView
+        android:id="@+id/tv_terminal_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:text="@string/terminal_label"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        android:textColor="@android:color/black"
+        app:layout_constraintLeft_toLeftOf="@id/tv_terminal"
+        app:layout_constraintBottom_toBottomOf="@id/iv_table_header"
+        app:layout_constraintRight_toRightOf="@id/tv_terminal"
+        app:layout_constraintTop_toTopOf="@id/iv_table_header"/>
+
+    <TextView
+        android:id="@+id/tv_terminal"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        tool:text="@string/terminal"
+        app:layout_constraintTop_toTopOf="@id/iv_table"
+        app:layout_constraintRight_toRightOf="@id/iv_table"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        app:layout_constraintLeft_toLeftOf="@id/iv_table"
+        />
+
+    <TextView
+        android:id="@+id/tv_gate_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/gate_label"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="@id/iv_table_header"
+        app:layout_constraintTop_toTopOf="@id/iv_table_header"
+        app:layout_constraintLeft_toLeftOf="@id/tv_gate"
+        app:layout_constraintRight_toRightOf="@id/tv_gate"
+        />
+
+    <TextView
+        android:id="@+id/tv_gate"
+        tool:text="@string/gate"
+        android:layout_width="120dp"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="@id/iv_table"
+        app:layout_constraintRight_toRightOf="@id/iv_table"
+        app:layout_constraintTop_toBottomOf="@id/iv_table_header"
+        app:layout_constraintBottom_toBottomOf="@id/iv_table"
+        android:textAlignment="center"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
+        android:textColor="@android:color/white"
+        />
+
+
+    <TextView
+        android:id="@+id/tv_seat_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/seat_label"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="@id/iv_table_header"
+        app:layout_constraintTop_toTopOf="@id/iv_table_header"
+        app:layout_constraintLeft_toLeftOf="@id/tv_seat"
+        app:layout_constraintRight_toRightOf="@id/tv_seat"
+        />
+
+    <TextView
+        android:id="@+id/tv_seat"
+        tool:text="@string/seat"
+        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="@id/iv_table"
+        app:layout_constraintRight_toRightOf="@id/iv_table"
+        app:layout_constraintTop_toBottomOf="@id/iv_table_header"
+        app:layout_constraintBottom_toBottomOf="@id/iv_table"
+        android:textAlignment="center"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
+        android:textColor="@android:color/white"
+        />
+
+    <ImageView
+        android:id="@+id/iv_barcode"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_table"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@mipmap/barcode" />
+
+    <TextView
+        android:id="@+id/tv_flight_code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tool:text="@string/flight_code"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
+        app:layout_constraintLeft_toRightOf="@id/iv_left_rectangle"
+        app:layout_constraintRight_toLeftOf="@id/iv_right_rectangle"
+        app:layout_constraintTop_toTopOf="@id/divider"
+        android:layout_margin="8dp"
+        android:textColor="@color/colorPrimary"
+        tool:layout_editor_absoluteY="142dp" />
+
+    <ImageView
+        android:id="@+id/iv_plane"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/divider"
+        app:layout_constraintEnd_toStartOf="@+id/tv_destination_code"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_origin_code"
+        app:srcCompat="@drawable/art_plane" />
+
+
+    <!--   (6) Set the background to the shape_rectangle_stroke drawable -->
+
+
+    <!--   (7) Create an ImageView for the divider -->
+
+
+    <!--   (8) Create an ImageView for the rightRectangle -->
+
+
+
+    <!--   (9) Create a TextView for the origin code, the destination code and the flight code -->
+
+
+    <!--  (15) Import the plane image SVG file into the drawable directory and name it art_plane -->
+    <!--  (16) Create an ImageView for the plane and set the background to art_plane drawable -->
+
+  <!--   (10) Create a TextView for the time texts and their corresponding labels -->
+
+
+    <!--  (11) Create an ImageView for the blue table's header -->
+
+    <!--  (12) Create an ImageView for the blue table's body -->
+
+    <!--  (13) Create a TextView for each of the labels and text fields in the blue table -->
+
+    <!--  (14) Create an ImageView for the barcode -->
+
+
+
+</android.support.constraint.ConstraintLayout>
+
+</ScrollView>
