--- a/Lesson11-Completeing-The-UI/T11.03-Solution-LandscapeLayout/app/src/main/res/layout/flight_info.xml
+++ b/Lesson11-Completeing-The-UI/T11.03-Solution-LandscapeLayout/app/src/main/res/layout/flight_info.xml
@@ -5,13 +5,14 @@
         // COMPLETED (3) Move all Views in the flight information section from activity_main to flight_info
 -->
 
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+
 
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
         android:id="@+id/leftRectangle"
@@ -96,4 +97,3 @@
 
 
 </android.support.constraint.ConstraintLayout>
-    </layout>
