--- a/Lesson12-Visual-Polish/T12.01-Exercise-ColorsAndFonts/app/src/main/res/layout/color_font_activity.xml
+++ b/Lesson12-Visual-Polish/T12.01-Exercise-ColorsAndFonts/app/src/main/res/layout/color_font_activity.xml
@@ -12,7 +12,9 @@
     tools:context="com.example.android.visualpolish.ColorFontActivity">
 
     <!-- Views for displaying colors -->
-    <!-- TODO (3) Add a view to display the newly created "colorPrimaryLight"; layout height = 48dp -->
+    <!--   (3) Add a view to display the newly created "colorPrimaryLight"; layout height = 48dp -->
+
+
 
     <View android:id="@+id/primary"
         android:layout_width="match_parent"
@@ -29,6 +31,11 @@
         android:layout_height="48dp"
         android:background="@color/colorAccent"/>
 
+    <View
+        android:id="@+id/primaryLight"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/colorPrimaryLight"/>
 
     <!-- TextViews that contain all types of text sizes and font families -->
     <TextView
@@ -72,7 +79,16 @@
         android:textSize="20sp"
         android:fontFamily="sans-serif-medium"/>
 
-    <!-- TODO (4) Add a text view to display text with a size = 16sp, and a font-family = sans-serif-smallcaps -->
+    <TextView
+        android:id="@+id/text16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="@string/small_16"
+        />
+
+    <!--   (4) Add a text view to display text with a size = 16sp, and a font-family = sans-serif-smallcaps -->
 
 
 </LinearLayout>
